--- a/index.html
+++ b/index.html
@@ -45,7 +45,49 @@
         </ul>
       </section>
       <section id="PrioritiesSec">
-
+        <section class="content">
+          <h2>PRIORITIES GO FIRST</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</span>
+          <ul>
+            <li>
+              <h4>COMPANY</h4>
+              <span class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</span>
+              <h5>ADAM JOHNS</h5>
+              <span class="posada">account manager</span>
+            </li>
+            <li>
+              <h4>COMPANY</h4>
+              <span class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</span>
+              <h5>ADAM JOHNS</h5>
+              <span class="posada">account manager</span>
+            </li>
+            <li>
+              <h4>COMPANY</h4>
+              <span class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</span>
+              <h5>ADAM JOHNS</h5>
+              <span class="posada">account manager</span>
+            </li>
+            <li>
+              <h4>COMPANY</h4>
+              <span class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</span>
+              <h5>ADAM JOHNS</h5>
+              <span class="posada">account manager</span>
+            </li>
+            <li>
+              <h4>COMPANY</h4>
+              <span class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</span>
+              <h5>ADAM JOHNS</h5>
+              <span class="posada">account manager</span>
+            </li>
+            <li>
+              <h4>COMPANY</h4>
+              <span class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</span>
+              <h5>ADAM JOHNS</h5>
+              <span class="posada">account manager</span>
+            </li>
+          </ul>
+        </section>
+          <div></div>
       </section>
     </main>
 
