--- a/index.html
+++ b/index.html
@@ -90,14 +90,52 @@
           <div></div>
       </section>
       <section id="WhatExactlySec">
-        <h2>WHO ARE WE</h2>
-        <span>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem</span>
-        <ul>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Travel</a></li>
-          <li><a href="#">Mission</a></li>
-          <li><a href="#">Photos</a></li>
+        <div class="">
+          <h2>WHO ARE WE</h2>
+          <span>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem</span>
+          <ul class="menu">
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Travel</a></li>
+            <li><a href="#">Mission</a></li>
+            <li><a href="#">Photos</a></li>
+          </ul>
+        </div>
+
+        <ul class="sport2">
+          <li>
+            <img src="images/Square 1.png" alt="">
+            <h4>SPORT</h4>
+            <span class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</span>
+            <h5>ADAM JOHNS</h5>
+            <span class="posada">Account manager</span>
+          </li>
+          <li>
+            <img src="images/Square 2.png" alt="">
+            <h4>SPORT</h4>
+            <span class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</span>
+            <h5>ADAM JOHNS</h5>
+            <span class="posada">Account manager</span>
+          </li>
+          <li>
+            <img src="images/Square 3.png" alt="">
+            <h4>SPORT</h4>
+            <span class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</span>
+            <h5>ADAM JOHNS</h5>
+            <span class="posada">Account manager</span>
+          </li>
+
         </ul>
+      </section>
+      <section id="JustTextSec">
+        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</span>
+        <span class="author">David Johnson</span>
+      </section>
+      <section id="NatureSec">
+        <div class="">
+          <h2>NATURE IS ABOVE ALL</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</span>
+        </div>
+        <img src="images/foto3.jpg" alt="">
       </section>
     </main>
 
