--- a/index.html
+++ b/index.html
@@ -137,6 +137,15 @@
         </div>
         <img src="images/foto3.jpg" alt="">
       </section>
+      <section id="BuyTicketSec">
+        <div class="opblock"></div>
+        <div class="content">
+          <h1>BUY YOUR TICKETS</h1>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</span>
+          <button type="button" name="button">HERE</button>
+        </div>
+
+      </section>
     </main>
 
   </body>
