--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
             <li><a href="#">Photos</a></li>
           </ul>
         </div>
-
         <ul class="sport2">
           <li>
             <img src="images/Square 1.png" alt="">
@@ -123,7 +122,6 @@
             <h5>ADAM JOHNS</h5>
             <span class="posada">Account manager</span>
           </li>
-
         </ul>
       </section>
       <section id="JustTextSec">
@@ -141,10 +139,47 @@
         <div class="opblock"></div>
         <div class="content">
           <h1>BUY YOUR TICKETS</h1>
-          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</span>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</span>
           <button type="button" name="button">HERE</button>
         </div>
 
+      </section>
+      <section id="TableSec">
+        
+
+        <table>
+          <tr>
+            <td>
+              <span>Projects / 20th August</span>
+              <h3>SOMETHING NEW HAS JUST ARRIVED</h3>
+              <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</span>
+            </td>
+            <td>
+              <img src="images/Square 4.png" alt="">
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <img src="images/Square 5.png" alt="">
+            </td>
+            <td>
+              <span>Projects / 20th August</span>
+              <h3>SOMETHING NEW HAS JUST ARRIVED</h3>
+              <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</span>
+            </td>
+            
+          </tr>
+          <tr>
+            <td>
+              <span>Projects / 20th August</span>
+              <h3>SOMETHING NEW HAS JUST ARRIVED</h3>
+              <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</span>
+            </td>
+            <td>
+              <img src="images/Square 6.png" alt="">
+            </td>
+          </tr>
+        </table>
       </section>
     </main>
 
