--- a/index.html
+++ b/index.html
@@ -181,6 +181,28 @@
           </tr>
         </table>
       </section>
+      <section id="Column3Text">
+        <ul>
+          <li>
+            <h3>Lorem ipsum dolor sit</h3>
+            <span>Trips / 16th March, 2019</span>
+          </li>
+
+          <li>
+            <h3>Lorem ipsum dolor sit</h3>
+            <span>Trips / 16th March, 2019</span>
+          </li>
+
+          <li>
+            <h3>Lorem ipsum dolor sit</h3>
+            <span>Trips / 16th March, 2019</span>
+          </li>
+        </ul>
+      </section>  
+      <section id="JustTextSec2">
+        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</span>
+        <span class="author">David Johnson</span>
+      </section>
     </main>
 
   </body>
