--- a/index.html
+++ b/index.html
@@ -203,6 +203,36 @@
         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</span>
         <span class="author">David Johnson</span>
       </section>
+      <section id="Footer">
+        <div class="first">
+          <h3>ABOUT</h3>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</span>
+          <ul>
+            <li><a href=""><img src="images/Color     copy.png" alt=""></a></li>
+            <li><a href=""><img src="images/Color     copy 2.png" alt=""></a></li>
+            <li><a href=""><img src="images/Color     copy 3.png" alt=""></a></li>
+            <li><a href=""><img src="images/Color     copy 4.png" alt=""></a></li>
+            <li><a href=""><img src="images/Color     copy 5.png" alt=""></a></li>
+          </ul>
+        </div>
+        <div class="second">
+          <h3>ABOUT</h3>
+          <ul>
+            <li>
+              <a href="">Team</a>
+            </li>
+            <li>
+              <a href="">Join us</a>
+            </li>
+            <li>
+              <a href="">Ethic</a>
+            </li>
+            <li>
+              <a href="">Goals</a>
+            </li>
+          </ul>
+        </div>
+      </section> 
     </main>
 
   </body>
