--- a/index.html
+++ b/index.html
@@ -208,27 +208,61 @@
           <h3>ABOUT</h3>
           <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</span>
           <ul>
-            <li><a href=""><img src="images/Color     copy.png" alt=""></a></li>
-            <li><a href=""><img src="images/Color     copy 2.png" alt=""></a></li>
-            <li><a href=""><img src="images/Color     copy 3.png" alt=""></a></li>
-            <li><a href=""><img src="images/Color     copy 4.png" alt=""></a></li>
-            <li><a href=""><img src="images/Color     copy 5.png" alt=""></a></li>
+            <li><a href="#"><img src="images/Color     copy.png" alt=""></a></li>
+            <li><a href="#"><img src="images/Color     copy 2.png" alt=""></a></li>
+            <li><a href="#"><img src="images/Color     copy 3.png" alt=""></a></li>
+            <li><a href="#"><img src="images/Color     copy 4.png" alt=""></a></li>
+            <li><a href="#"><img src="images/Color     copy 5.png" alt=""></a></li>
           </ul>
         </div>
         <div class="second">
           <h3>ABOUT</h3>
           <ul>
             <li>
-              <a href="">Team</a>
+              <a href="#">Team</a>
             </li>
             <li>
-              <a href="">Join us</a>
+              <a href="#">Join us</a>
             </li>
             <li>
-              <a href="">Ethic</a>
+              <a href="#">Ethic</a>
             </li>
             <li>
-              <a href="">Goals</a>
+              <a href="#">Goals</a>
+            </li>
+          </ul>
+        </div>
+        <div class="second">
+          <h3>ABOUT</h3>
+          <ul>
+            <li>
+              <a href="#">Team</a>
+            </li>
+            <li>
+              <a href="#">Join us</a>
+            </li>
+            <li>
+              <a href="#">Ethic</a>
+            </li>
+            <li>
+              <a href="#">Goals</a>
+            </li>
+          </ul>
+        </div>
+        <div class="second">
+          <h3>ABOUT</h3>
+          <ul>
+            <li>
+              <a href="#">Team</a>
+            </li>
+            <li>
+              <a href="#">Join us</a>
+            </li>
+            <li>
+              <a href="#">Ethic</a>
+            </li>
+            <li>
+              <a href="#">Goals</a>
             </li>
           </ul>
         </div>
